--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
+    "react": "^16.5.1",
+    "react-dom": "^16.5.1",
+    "react-helmet": "^5.2.0",
+    "styled-components": "^3.4.9"
+  },
+  "devDependencies": {
     "babel-plugin-styled-components": "^1.7.1",
     "gatsby": "^2.0.1",
     "gatsby-plugin-manifest": "^2.0.2",
@@ -23,13 +29,6 @@
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sitemap": "^2.0.1",
     "gatsby-plugin-styled-components": "^3.0.0",
-    "gatsby-plugin-typescript": "^2.0.0",
-    "react": "^16.5.1",
-    "react-dom": "^16.5.1",
-    "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.9"
-  },
-  "devDependencies": {
-    "prettier": "^1.14.2"
+    "gatsby-plugin-typescript": "^2.0.0"
   }
 }
