--- a/package.json
+++ b/package.json
@@ -15,17 +15,19 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
-    "gatsby-source-contentful": "^2.0.2",
+    "gatsby-source-contentful": "^2.0.4",
     "react": "^16.5.2",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
-    "styled-components": "^3.4.9"
+    "styled-components": "^4.0.2"
   },
   "devDependencies": {
+    "@types/react": "^16.4.18",
+    "@types/styled-components": "^4.0.1",
     "babel-plugin-styled-components": "^1.8.0",
-    "gatsby": "^2.0.19",
-    "gatsby-plugin-manifest": "^2.0.4",
-    "gatsby-plugin-offline": "^2.0.5",
+    "gatsby": "^2.0.28",
+    "gatsby-plugin-manifest": "^2.0.5",
+    "gatsby-plugin-offline": "^2.0.7",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sitemap": "^2.0.1",
