--- a/package.json
+++ b/package.json
@@ -15,19 +15,19 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
-    "gatsby-source-contentful": "^2.0.4",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
+    "gatsby-source-contentful": "^2.0.6",
+    "react": "^16.6.0",
+    "react-dom": "^16.6.0",
     "react-helmet": "^5.2.0",
     "styled-components": "^4.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.1.2",
     "@types/react": "^16.4.18",
-    "@types/styled-components": "^4.0.1",
+    "@types/styled-components": "^4.0.3",
     "babel-plugin-styled-components": "^1.8.0",
-    "gatsby": "^2.0.28",
-    "gatsby-plugin-manifest": "^2.0.5",
-    "gatsby-plugin-offline": "^2.0.7",
+    "gatsby": "^2.0.31",
+    "gatsby-plugin-manifest": "^2.0.6",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sitemap": "^2.0.1",
