--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
+    "gatsby-image": "^2.0.20",
+    "lodash.shuffle": "^4.2.0",
+    "memoize-one": "^4.0.3",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
     "styled-components": "^4.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.1.5",
+    "@types/memoize-one": "^3.1.1",
     "@types/react": "^16.4.18",
     "@types/styled-components": "^4.0.3",
     "babel-plugin-styled-components": "^1.8.0",
