--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "^2.0.42",
     "gatsby-plugin-manifest": "^2.0.8",
+    "gatsby-plugin-netlify": "^2.0.4",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sitemap": "^2.0.2",
     "gatsby-plugin-styled-components": "^3.0.1",
