--- a/package.json
+++ b/package.json
@@ -18,17 +18,17 @@
     "gatsby-image": "^2.0.20",
     "lodash.shuffle": "^4.2.0",
     "memoize-one": "^4.0.3",
-    "react": "^16.6.1",
-    "react-dom": "^16.6.1",
-    "styled-components": "^4.1.0"
+    "react": "^16.6.3",
+    "react-dom": "^16.6.3",
+    "styled-components": "^4.1.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.1.5",
+    "@babel/core": "^7.1.6",
     "@types/memoize-one": "^3.1.1",
     "@types/react": "16.4.18",
-    "@types/styled-components": "^4.0.3",
+    "@types/styled-components": "4.0.3",
     "babel-plugin-styled-components": "^1.8.0",
-    "gatsby": "^2.0.46",
+    "gatsby": "^2.0.49",
     "gatsby-plugin-manifest": "^2.0.9",
     "gatsby-plugin-netlify": "^2.0.4",
     "gatsby-plugin-robots-txt": "^1.3.0",
