--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@types/memoize-one": "^3.1.1",
-    "@types/react": "16.4.18",
+    "@types/react": "^16.7.6",
     "@types/styled-components": "4.0.3",
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "^2.0.49",
