--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "devDependencies": {
     "@babel/core": "^7.1.6",
     "@types/memoize-one": "^3.1.1",
-    "@types/react": "^16.7.6",
-    "@types/styled-components": "4.0.3",
+    "@types/react": "^16.7.7",
+    "@types/styled-components": "^4.1.1",
     "babel-plugin-styled-components": "^1.8.0",
     "gatsby": "^2.0.54",
     "gatsby-plugin-manifest": "^2.0.10",
