--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "memoize-one": "^4.0.3",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
+    "react-responsive": "^6.0.1",
     "styled-components": "^4.1.1"
   },
   "devDependencies": {
