--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.1.6",
+    "@types/lodash.shuffle": "^4.2.4",
     "@types/memoize-one": "^3.1.1",
     "@types/react": "^16.7.7",
     "@types/styled-components": "^4.1.1",
