--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dev": "gatsby develop"
   },
   "dependencies": {
+    "downshift": "^3.1.5",
     "gatsby-image": "^2.0.21",
     "lodash.shuffle": "^4.2.0",
     "memoize-one": "^4.0.3",
