--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-source-contentful": "^2.0.21"
+  },
+  "resolutions": {
+    "@types/react": "16.7.18"
   }
 }
