--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-typescript": "^2.0.3",
-    "gatsby-source-contentful": "^2.0.22"
+    "gatsby-source-contentful": "^2.0.22",
+    "typescript": "^3.2.2"
   },
   "resolutions": {
     "@types/react": "16.7.18"
