--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -19,6 +19,10 @@
       },
       "runOptions": {
         "runOn": "folderOpen"
+      },
+      "group": {
+        "kind": "test",
+        "isDefault": true
       }
     },
     {
@@ -35,6 +39,10 @@
       },
       "runOptions": {
         "runOn": "folderOpen"
+      },
+      "group": {
+        "kind": "build",
+        "isDefault": true
       }
     }
   ]
