--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "gatsby": "^2.0.91",
     "gatsby-plugin-manifest": "^2.0.13",
     "gatsby-plugin-netlify": "^2.0.6",
+    "gatsby-plugin-offline": "^2.0.21",
     "gatsby-plugin-robots-txt": "^1.3.0",
     "gatsby-plugin-sitemap": "^2.0.4",
     "gatsby-plugin-styled-components": "^3.0.4",
