--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-source-contentful": "^2.0.26",
+    "lodash.flatten": "^4.4.0",
     "typescript": "^3.2.2"
   },
   "resolutions": {
