--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "scripts": {
     "build": "gatsby build",
-    "dev": "gatsby develop"
+    "dev": "gatsby develop",
+    "test": "jest --verbose"
   },
   "dependencies": {
     "gatsby-image": "^2.0.26",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@types/jest": "^23.3.13",
     "@types/lodash.shuffle": "^4.2.4",
     "@types/memoize-one": "^4.1.0",
     "@types/react": "^16.7.20",
@@ -38,7 +40,9 @@
     "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-typescript": "^2.0.3",
     "gatsby-source-contentful": "^2.0.26",
+    "jest": "^23.6.0",
     "lodash.flatten": "^4.4.0",
+    "ts-jest": "^23.10.5",
     "typescript": "^3.2.2"
   },
   "resolutions": {
