--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compileOnSave": true,
   "compilerOptions": {
     "allowSyntheticDefaultImports": true,
+    "strictNullChecks": true,
     "skipLibCheck": true,
     "typeRoots": ["./node_modules/@types"],
     "lib": ["esnext", "dom"],
